recumperando o carrinho de compra e codificando as classes Pix e GnPix

--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,9 @@
         "php": ">=7.2.5",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "gerencianet/gerencianet-sdk-php": "^5.0",
         "mpdf/qrcode": "^1.2",
+        "sensio/framework-extra-bundle": "^6.2",
         "symfony/console": "5.4.*",
         "symfony/dotenv": "5.4.*",
         "symfony/flex": "^1.17|^2",
