--- a/config/packages/framework.yaml
+++ b/config/packages/framework.yaml
@@ -1,8 +1,11 @@
 # see https://symfony.com/doc/current/reference/configuration/framework.html
+parameters:
+    env(HTTP_METHOD_OVERRIDE): 'true'
 framework:
     secret: '%env(APP_SECRET)%'
+    http_method_override: '%env(bool:HTTP_METHOD_OVERRIDE)%'
     #csrf_protection: true
-    http_method_override: false
+    #http_method_override: false
 
     # Enables session support. Note that the session will ONLY be started if you read or write from it.
     # Remove or comment this section to explicitly disable session support.
