--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,10 @@
         "symfony/flex": "^1.17|^2",
         "symfony/framework-bundle": "5.4.*",
         "symfony/runtime": "5.4.*",
-        "symfony/yaml": "5.4.*"
+        "symfony/yaml": "5.4.*",
+      "ext-curl": "*",
+      "ext-json": "*",
+      "ext-simplexml": "*"
     },
     "config": {
         "allow-plugins": {
